data/derived/sp14/progs/unify/prog0217.ml.out
Characters 73-98:
  | h::t -> (mulByDigit i (List.rev t) * 10 )  h*i;;
             ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
